--- a/css/estilos.css
+++ b/css/estilos.css
@@ -170,7 +170,7 @@ img {
   right: 0;
   bottom: 0;
   height: 100vh;
-  width: 30rem;
+  width: 25rem;
   padding: 3rem 4rem;
   background-color: var(--oscuro);
   animation: desplazamiento 0.5s ease-in-out;
@@ -213,18 +213,32 @@ img {
   color: var(--blanco);
   font-size: 4rem;
 }
+
+.contenedor-encabezado{
+  transition: transform 0.3s ease-in-out;
+}
+
 @media (min-width: 768px) {
   .texto-encabezado h2 {
     font-size: 8rem;
-    margin-top: 80px;
   }
 }
-@media (min-width: 320px) {
+
+@media (max-width: 550px) {
+  .contenedor-encabezado {
+    transform: translateY(5rem);
+  }
   .texto-encabezado h2 {
     text-align: center;
-    margin-top: 80px;
   }
 }
+
+@media (max-width: 480px) {
+  .contenedor-encabezado {
+    transform: translateY(8rem); 
+  }
+}
+
 video {
   width: 100%;
   height: 100%;
