--- a/css/normalize.css
+++ b/css/normalize.css
@@ -174,7 +174,8 @@ textarea {
  */
 
 button,
-input { /* 1 */
+input {
+  /* 1 */
   overflow: visible;
 }
 
@@ -184,7 +185,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
 }
 
@@ -196,6 +198,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
+   appearance: button;
   -webkit-appearance: button;
 }
 
@@ -288,6 +291,7 @@ textarea {
  */
 
 [type="search"] {
+   appearance: textfield;
   -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
