--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,6 +13,7 @@ html {
   box-sizing: border-box;
   /*1rem = 10px*/
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 body {
   background-color: bisque;
